--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
+    "workbox-cacheable-response": "^7.0.0",
     "workbox-core": "^7.0.0",
+    "workbox-expiration": "^7.0.0",
     "workbox-precaching": "^7.0.0",
+    "workbox-routing": "^7.0.0",
     "workbox-window": "^7.0.0"
   },
   "devDependencies": {
